# cmake-examples

./: chengNote.md
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt  make.sh
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt  run.sh
01-basic/H-third-party-library/: CMakeLists.txt
01-basic/hello-world/: CMakeLists.txt  hello-world.cc
01-basic/hello-world-a/: CMakeLists.txt  ReadMe.txt
01-basic/hello-world-a/src/: HelloWorld.cc  main.cc
01-basic/hello-world-so/: CMakeLists.txt  cmake.sh  run.sh
01-basic/hello-world-so/build-1/: hello_world
01-basic/hello-world-so/build-1/install/etc/: sample.conf
01-basic/hello-world-so/build-2/: hello_world
01-basic/hello-world-so/build-4/: hello_world
01-basic/hello-world-so/build-4/install/include/installing/: HelloWorld.hpp
01-basic/hello-world-so/src/: HelloWorld.cc  main.cc
02-sub-projects/A-basic/subbinary/: CMakeLists.txt
